<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal"
    android:id="@+id/ll">

    <LinearLayout
        android:id="@+id/ll_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@drawable/home_selected" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/meau_home"
            android:textSize="@dimen/dp_home_bottomtxt"
            android:textColor="@color/color_home_bottomtxt" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@drawable/category_selected" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/meau_task"
            android:textSize="@dimen/dp_home_bottomtxt"
            android:textColor="@color/color_home_bottomtxt" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_btc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@drawable/btc_selected" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/meau_taskb"
            android:textSize="@dimen/dp_home_bottomtxt"
            android:textColor="@color/color_home_bottomtxt" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@drawable/task_selected" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/meau_wallet"
            android:textSize="@dimen/dp_home_bottomtxt"
            android:textColor="@color/color_home_bottomtxt" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_proudct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@drawable/team_selected" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:textSize="@dimen/dp_home_bottomtxt"
            android:text="@string/meau_team"
            android:textColor="@color/color_home_bottomtxt" />
    </LinearLayout>

</LinearLayout>